feat(citellus.html): match window title with report name
Change-Id: I5a79899c47cfbfb46b9e8c6b88300879aad68c16

--- a/citellusclient/citellus.html
+++ b/citellusclient/citellus.html
@@ -807,6 +807,7 @@
                             // Set title according to metadata
                             if (i == "title") {
                                 document.getElementById("reporttitle").innerText = item
+                                window.document.title = item
                             } else if (i == "path") {
                                 document.title = "Report for " + item.split("/").pop()
                             }
