style(citellus.html): change web field from error to output
Change-Id: Ie533d46474b3bc960cc9fb8cef7ed2498ab7132d

--- a/citellusclient/citellus.html
+++ b/citellusclient/citellus.html
@@ -593,7 +593,7 @@
                 } else {
                     row += '        <dd>N/A</dd>\n';
                 }
-                row += '             <dt>Error</dt>\n';
+                row += '             <dt>Output</dt>\n';
                 if (/[A-z0-9]+/.test(error_text)) {
                     row += '             <dd><pre>' + error_text + '</pre></dd>\n';
                 } else {
