Try to split if string is there
Change-Id: Iec062b3c88d9836aa48a3a8212e3b49caa0914b4

--- a/risuclient/risu.html
+++ b/risuclient/risu.html
@@ -808,7 +808,7 @@
                             if (i == "title") {
                                 document.getElementById("reporttitle").innerText = item
                                 window.document.title = item
-                            } else if (i == "path") {
+                            } else if (i == "path" &&  i.indexOf("/")>=0 ) {
                                 document.title = "Report for " + item.split("/").pop()
                             }
                         });
